# python-xmp-toolkit

./: .coveragerc  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.rst  pyproject.toml  run-coverage.sh  setup.py  test.py  tox.ini  travis-requirements.txt
.github/workflows/: python-package.yml
docs/: appendix.rst  conf.py  developers.rst  index.rst  installation.rst  using.rst
docs_src/: appendix.rst  conf.py  core.rst  developers.rst  files.rst  index.rst  installation.rst  introduction.rst  reference.rst  using.rst
docs_src/doc/: .buildinfo  appendix.html  developers.html  genindex.html  index.html  installation.html  introduction.html  modindex.html  objects.inv  reference.html  search.html  searchindex.js  using.html
docs_src/doc/.doctrees/: appendix.doctree  developers.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  reference.doctree  using.doctree
docs_src/doc/_sources/: index.txt  installation.txt  using.txt
libavm/: __init__.py  avm.py
libxmp/: __init__.py  consts.py  core.py  exceptions.py  exempi.py  files.py  types.py  utils.py  version.py
test/: common_fixtures.py  samples.py  sig05-003a.xmp  test.py  test_all.py  test_core.py  test_core_unit.py  test_exempi.py  test_files.py  test_roundtrip.py  xmpcoverage.py
test/fixtures/: BlueSquare450.tif  BlueSquare450.xmp  zeros.tif
test/samples/: BlueSquare.xmp  sig05-002a.tif  sig05-002a.xmp  test1.xmp
tests/: sig05-002a.tif
