[project]
name = "python-xmp-toolkit"

dynamic = ["version"]

description = "Python XMP Toolkit for working with metadata."

readme = "README.rst"

authors = [
    { name = "Lars Holm Nielsen" },
    { name = "John Evans" },
    { name = "Federico Caboni" },
    { name = "Amit Kapadia" },
]

license = { file = "LICENSE" }

keywords = ["XMP", "metadata", "multimedia", "development", "utilities"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]


dependencies = [
    "pytz"
]

[project.urls]
Homepage = "https://github.com/python-xmp-toolkit/python-xmp-toolkit"
Download = "https://pypi.python.org/pypi/python-xmp-toolkit"

[project.optional-dependencies]
test = []


[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "libxmp.version.VERSION"}
