[project]
name = "python-xmp-toolkit"

dynamic = ["version", "description"]

readme = "README.rst"

authors = [
    { name = "Lars Holm Nielsen" },
    { name = "John Evans" },
    { name = "Federico Caboni" },
    { name = "Amit Kapadia" },
]

license = { file = "LICENSE" }

keywords = ["XMP", "metadata", "multimedia", "development", "utilities"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]


dependencies = [
    "pytz"
]


[project.urls]
Homepage = "https://github.com/python-xmp-toolkit/python-xmp-toolkit"
Download = "https://pypi.python.org/pypi/python-xmp-toolkit"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "libxmp"


[tool.flit.sdist]
include = [
    "test/*", ".coveragerc",
    "AUTHORS", "CHANGELOG",
    "INSTALL"
]
